Fixed nav-bar alignment issues.

--- a/Catfish/Catfish.Web.Extensions/assets/public/css/webextensions.css
+++ b/Catfish/Catfish.Web.Extensions/assets/public/css/webextensions.css
@@ -1,6 +1,13 @@
-﻿body {
+﻿
+li.nav-item.dropdown {
+    margin-top: 1px;
 }
 
-li.nav-item.dropdown{
-    margin-top:5px;
-}
+    li.nav-item.dropdown .btn {
+        color: rgba(0,0,0,.55) !important;
+    }
+
+        li.nav-item.dropdown .btn.active, li a.dropdown-item.nav-link.active {
+            color: #f94c3b !important;
+            background-color: transparent !important;
+        }
